refactor:integrate-v0.10-v0.17-into-core-loop